--- a/src/app/Components/customer-homepage/customer-homepage.component.css
+++ b/src/app/Components/customer-homepage/customer-homepage.component.css
@@ -3,5 +3,8 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 5rem;
+    height: 2em;
+    align-items: center;
+    text-align: center;
+    padding: 1em 0em 0em 0em;
 }
