--- a/Admin-Driver/src/app/Components/login/login.component.html
+++ b/Admin-Driver/src/app/Components/login/login.component.html
@@ -1,1 +1,6 @@
-<p>login works!</p>
+<form>
+    <h1>{{ loginTitle }}</h1>
+    <input type="text" placeholder="Email">
+    <input type="password" placeholder="Password">
+    <input type="submit" value="Login">
+</form>
