add driver home

--- a/Admin-Driver/src/app/Components/driver-home/driver-home.component.html
+++ b/Admin-Driver/src/app/Components/driver-home/driver-home.component.html
@@ -1,1 +1,10 @@
-<p>driver-home works!</p>
+<h2>Collections</h2>
+<ul class="heroes">
+    <ul class="heroes">
+        <li >
+            <a routerLink="/collection">
+            <span class="badge">Collectin 1</span> 
+          </a>
+        </li>
+      </ul>
+</ul>
