--- a/Admin-Driver/src/app/app.component.html
+++ b/Admin-Driver/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-login></app-login>
+<!-- <app-login></app-login> -->
+<!-- <app-driver-home></app-driver-home> -->
+<router-outlet></router-outlet>
