--- a/Admin-Driver/src/app/Components/login/login.component.html
+++ b/Admin-Driver/src/app/Components/login/login.component.html
@@ -2,5 +2,5 @@
     <h1>{{ loginTitle }}</h1>
     <input type="text" placeholder="Email">
     <input type="password" placeholder="Password">
-    <input type="submit" value="Login">
+    <input type="submit" value="Login" routerLink="/driverHome">
 </form>
