--- a/Admin-Driver/src/app/Components/collections/collections.component.html
+++ b/Admin-Driver/src/app/Components/collections/collections.component.html
@@ -1,10 +1,10 @@
-<button type="button">
+<button type="button" (click)="goBack()">
     Back
 </button>
 <div class="collections">
     <h1>Collection Details</h1>
     <li>{{location | uppercase}}</li>
-    <button type="button" class="btnTakeCollection" (click)="goBack()"> 
+    <button type="button" class="btnTakeCollection" > 
         Take Collection
     </button>
 </div>
