--- a/Admin-Driver/src/app/Components/driver-home/driver-home.component.css
+++ b/Admin-Driver/src/app/Components/driver-home/driver-home.component.css
@@ -1,16 +1,24 @@
-/* HeroesComponent's private CSS styles */
-.heroes {
+.DriverHome {
+    background-color: #3a797e80;
+    border-radius: 5px;
+    box-shadow: 0 0 2000px #3a797e9d;
+    padding: 80px;
+    width: 500px;
+    margin: 0 auto;
+    margin-top: 4em;
+}
+.collections {
     margin: 0 0 2em 0;
     list-style-type: none;
     padding: 0;
     width: 15em;
   }
   
-  .heroes li {
+  .collections li {
     display: flex;
   }
   
-  .heroes button {
+  .collections button {
     flex: 1;
     cursor: pointer;
     position: relative;
@@ -24,51 +32,53 @@
     height: 1.8em;
   }
   
-  .heroes button:hover {
+  .collections button:hover {
     color: #098b4a;;
     background-color: #e6e6e6;
     left: .1em;
   }
   
-  .heroes button:active {
+  .collections button:active {
     background-color: #525252;
     color: #fafafa;
   }
   
-  .heroes button.selected {
+  .collections button.selected {
     background-color: black;
     color: white;
   }
   
-  .heroes button.selected:hover {
+  .collections button.selected:hover {
     background-color: #505050;
     color: white;
   }
   
-  .heroes button.selected:active {
+  .collections button.selected:active {
     background-color: black;
     color: white;
   }
   
-  .heroes .badge {
+  .collections .badge {
     display: inline-block;
-    font-size: small;
+    font-size: medium;
     color: white;
-    padding: 0.8em 0.7em 0 0.7em;
+    padding: 0.8em 3.7em 0.8em 3.7em;
     background-color: #405061;
-    line-height: 1em;
+    line-height: 2em;
     margin-right: .8em;
-    border-radius: 4px 0 0 4px;
-  }
-  
-  .heroes .name {
-    align-self: center;
+    border-radius: 4px;
+    position: relative;
+    top: -70px;
   }
 
-  .heroes .surname {
-    align-self: right;
-    display: flex;
-    margin-left: .8em;
-    padding: 0.35em 0em 0em 0em;
+  .collections .badge:hover {
+    background-color: #486788;
   }
 
+  h2 {
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    position: relative;
+    top: -70px;
+  }
