--- a/Admin-Driver/src/app/Components/driver-home/driver-home.component.html
+++ b/Admin-Driver/src/app/Components/driver-home/driver-home.component.html
@@ -1,10 +1,14 @@
-<h2>Collections</h2>
-<ul class="heroes">
-    <ul class="heroes">
-        <li >
-            <a routerLink="/collection">
-            <span class="badge">Collectin 1</span> 
-          </a>
-        </li>
-      </ul>
-</ul>
+<app-header [title]="Drivertitle"></app-header>
+<div class="DriverHome">
+  <h2>Collections</h2>
+  <ul class="collections">
+      <ul class="collections">
+          <li >
+              <a routerLink="/collection">
+              <span class="badge">Collectin 1</span> 
+            </a>
+          </li>
+        </ul>
+  </ul>
+</div>
+<app-footer></app-footer>
