--- a/Admin-Driver/src/app/app.component.html
+++ b/Admin-Driver/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-login></app-login>
+<!-- <app-login></app-login> -->
+<app-admin-home></app-admin-home>
+<!-- <app-navbar></app-navbar>
+<router-outlet></router-outlet> -->
