--- a/Customer/src/app/Components/booking/booking.component.html
+++ b/Customer/src/app/Components/booking/booking.component.html
@@ -1,1 +1,27 @@
-<p>booking works!</p>
+<form>
+    <h2>Booking Form</h2>
+    <input type="text" placeholder="Unit Size">
+    <input type="text" placeholder="Price" >
+    <input type="text" placeholder="Width">
+    <input type="text" placeholder="Length">
+    <div class="spinner">
+        <div>
+            <label>Quantity:</label>
+        </div>
+        
+        <button class="decrement">-</button>
+        <input type="number" id="quantity" min="1" max="100" value="1">
+        <button class="increment" >+</button>
+    </div>
+    <div class="collection">
+        <label for="collection">Collection:</label>
+        <input type="radio" id="yes" name="collection" value="yes">
+        <label for="yes">Yes</label>
+        <input type="radio" id="no" name="collection" value="no">
+        <label for="no">No</label>
+    </div>
+    <input type="text" placeholder="Total">
+       <div>
+        <button  class="btn">Complete Booking</button>
+    </div>
+</form>
