--- a/Customer/src/app/Components/about-us/about-us.component.html
+++ b/Customer/src/app/Components/about-us/about-us.component.html
@@ -1,1 +1,48 @@
-<p>about-us works!</p>
+<header>
+  <h1>About Us</h1>
+</header>
+<body>
+<div class="main2">
+  <h2>Our mission</h2>
+  <h2>Making storage better for everyone</h2>
+  <p>
+    Our mission is to provide you with peace of mind and convenience in your
+    storage experience. <br> Whether you're looking for short-term or long-term
+    storage, we've got you covered.
+  </p>
+</div>
+<div class="main">
+  <div class="container">
+    <h2>Welcome to Lily's Self Storage</h2>
+    <p>
+      At Lily's Self Storage, we understand that your possessions are valuable
+      to you, and that's why we offer<br />
+      secure and reliable storage solutions for your needs.
+    </p>
+    <p>
+      With our state-of-the-art facilities, 24/7 security, and a friendly staff,
+      we ensure that your items are safe and <br />accessible whenever you need
+      them.
+    </p>
+    
+    <p>
+      Thank you for choosing Lily's Self Storage. We look forward to serving you
+      and meeting all your storage needs.
+    </p>
+    <p>
+      <a href="#" class="cta-button">Contact Us</a>
+    </p>
+    <div class="container2">
+      <img
+        src="https://github.com/Tsireledzo2/Storage-Rental-System-2.0-FrontEnd/assets/101458558/fe5318ef-b82d-4928-b170-717cf06cacc0"
+        alt="office"
+        class="img"
+      />
+    </div>
+  </div>
+</div>
+</body>
+<footer>
+      <p>&copy; 2023 Lilyz Storage<p>
+      <p>Contact: contact@example.com</p>
+</footer>
