Server created and connection established

--- a/Admin-Driver/src/app/Components/bookings-list-component/bookings-list-component.component.html
+++ b/Admin-Driver/src/app/Components/bookings-list-component/bookings-list-component.component.html
@@ -2,10 +2,9 @@
     <div class="header">
       <h1>Lists of Bookings</h1>
     </div>
-      <ul>
-        <li *ngFor="let Booking of bookings">{{ bookings }}</li>
-      </ul>
-   
+      
+       <div class="booking-list-container">
+        <div class="booking-box" *ngFor="let Booking of bookings">{{ bookings }}</div>
 
   </div>
-  
+ 
