--- a/Admin-Driver/src/app/Components/vehicle-list-component/vehicle-list-component.component.css
+++ b/Admin-Driver/src/app/Components/vehicle-list-component/vehicle-list-component.component.css
@@ -42,7 +42,7 @@
 }
 
 .vehicle-box button.delete-button {
-  background-color: #f44336;
+  background-color: #474fc4;
   color: white;
   border: none;
   padding: 5px 10px;
