--- a/Admin-Driver/src/app/driver-list/driver-list.component.html
+++ b/Admin-Driver/src/app/driver-list/driver-list.component.html
@@ -1,23 +1,15 @@
 <div class="page-container">
     <div class="header">
-  
+      <h1>List of Drivers</h1>
     </div>
     <div class="driver-list">
-      <h2>List of Bookings</h2>
-      <ul>
-        <li *ngFor="let driver of drivers">
-          {{ driver }}
-          <button (click)="deleteDriver(driver)" class="delete-button">Delete</button>
-        </li>
-      </ul>
+      <div class="driver-box" *ngFor="let driver of driver">
+        {{ driver.employee.last_name }} {{ driver.employee.first_name }}
+      <!-- <button class="delete-button" (click)="deleteDriver(driver.id)">X</button> -->
+      </div>
     </div>
     <div class="add-driver">
       <button (click)="addDriver()">Add Driver</button>
     </div>
-    <nav>
-      <ul>
-        <li><a routerLink="/driver-list">Driver List</a></li>
-      </ul>
-    </nav>
   </div>
   
