--- a/Customer/src/app/Components/customer-homepage/customer-homepage.component.html
+++ b/Customer/src/app/Components/customer-homepage/customer-homepage.component.html
@@ -1,9 +1,11 @@
 <!-- home.component.html -->
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
 
 <div class="home">
   <header>
     <div class="logo">
-      <img src="lilz-easy-logo.png" alt="Lilz Storage" />
+      <img src="../assets/image/l1.png" alt="Lilz Storage" width="150%" height="100%"  />
     </div>
     <nav>
       <ul>
@@ -16,11 +18,12 @@
   </header>
 
   <div class="hero">
-    <!-- Text overlay -->
+    <!-- Text overlay with moving background image -->
     <div class="slideshow-text">
+      <div class="background-image"></div>
       <h1 class="move-text">We Are the Best Storage</h1>
       <p>Your Trusted Solution for Safe and Convenient Storage</p>
-      <a routerLink="/storage-unit" class="btn">Explore Our Units</a>
+      <a  fullWidth variant="outline" routerLink="/storage-unit" class="btn">Explore Our Units</a>
     </div>
   </div>
 
