--- a/Customer/src/app/Components/customer-homepage/customer-homepage.component.html
+++ b/Customer/src/app/Components/customer-homepage/customer-homepage.component.html
@@ -7,9 +7,9 @@
     </div>
     <nav>
       <ul>
-        <li><a routerLink="/storage"><i class="fas fa-box"></i> Storage Unit</a></li>
-        <li><a routerLink="/about"><i class="fas fa-info-circle"></i> About Us</a></li>
-        <li><a routerLink="/contact"><i class="fas fa-phone"></i> Contact Us</a></li>
+        <li><a routerLink="/StorageUnit"><i class="fas fa-box"></i> Storage Unit</a></li>
+        <li><a routerLink="/AboutUs"><i class="fas fa-info-circle"></i> About Us</a></li>
+        <li><a routerLink="/ContactUs"><i class="fas fa-phone"></i> Contact Us</a></li>
         <li><a routerLink="/"><i class="fas fa-home"></i> Home</a></li>
       </ul>
     </nav>
