--- a/Customer/src/app/Components/storage-unit/storage-unit.component.html
+++ b/Customer/src/app/Components/storage-unit/storage-unit.component.html
@@ -30,10 +30,10 @@
       <div class="card-content">
         <img src="../assets/images/stora.jpg" alt="Card Image 3" style="max-width: 100%; max-height: 250px;"/> <!-- Increase max-height -->
         <h3>Small Storage Unit</h3>
-        <p> <strong>Description</strong> : A 12' x 15'</p> 
-        <p> The unit can handle the furnishings of a two bedroom apartment or small house with larger appliances.  </p>
-        <p> <strong> Price</strong> : R 1 000/month</p>
-        <p> <strong> Size</strong> : Small</p>
+        <p> <strong>Description</strong> </p> 
+        <p>   </p>
+        <p> <strong> Price</strong></p>
+        <p> <strong> Size</strong> </p>
         <button class="btn">Book</button>
       </div>
     </div>
@@ -43,11 +43,11 @@
       <div class="card-content">
         <img src="../assets/images/stora2.jpg" alt="Card Image 3" style="max-width: 100%; max-height: 500px;"/>
         <h3>Medium Storage Unit</h3>
-        <p><strong>Description</strong> : A 12' x 20'</p> 
+        <p><strong>Description</strong> </p> 
          <p>   
-          A 12' x 20' also provides extra width for your car doors and for maneuvering around your items.</p>
-        <p><strong> Price </strong> : R1 500/month</p>
-        <p> <Strong> Size </Strong>: Medium</p>
+          </p>
+        <p><strong> Price </strong> </p>
+        <p> <Strong> Size </Strong></p>
         <button class="btn">Book</button>
       </div>
     </div>
@@ -57,10 +57,10 @@
   <div class="card-content">
     <img src="../assets/images/stora3.jpg" alt="Card Image 3" style="max-width: 500px; max-height: 500px;"/>
     <h3>Large Storage Unit</h3>
-    <p><strong>Description</strong> : A 12' x 30' </p>
-    <p> The unit is typically used to store RVs, larger boats and vehicles. </p>
-    <p><strong> Price </strong> : R2 000/month</p>
-        <p> <Strong> Size </Strong>: Large</p>
+    <p><strong>Description</strong>  </p>
+    <p>  </p>
+    <p><strong> Price </strong> </p>
+        <p> <Strong> Size </Strong> </p>
     <button class="btn">Book</button>
   </div>
 </div>
