--- a/Customer/src/app/Components/customer-details/customer-details.component.html
+++ b/Customer/src/app/Components/customer-details/customer-details.component.html
@@ -1,1 +1,52 @@
-<p>customer-details works!</p>
+
+<div class="container">
+  <img class=“logo” src = "https://i.imgur.com/P4iVJz0.png">
+
+
+  <div class="form-container">
+    <h2>Personal Details</h2>
+    <form>
+      <div class="grid-container">
+        <div class="form-group">
+          <label for="alreadyBooked">Already stored with us before?</label>
+          <input type="checkbox" id="alreadyBooked" name="alreadyBooked" [(ngModel)]="alreadyBooked" required>
+        </div>
+        <div class="form-group">
+          <label for="firstName">First Name:</label>
+          <input type="text" id="firstName" name="firstName" required [disabled]="alreadyBooked" required >
+        </div>
+        <div class="form-group">
+          <label for="surname">Surname:</label>
+          <input type="text" id="surname" name="surname" required [disabled]="alreadyBooked" required> 
+        </div>
+        <div class="form-group">
+          <label for="cellphone">Cellphone:</label>
+          <input type="tel" id="cellphone" name="cellphone" required [disabled]="alreadyBooked" required>
+        </div>
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" required [disabled]="alreadyBooked" required>
+        </div>
+        <div class="form-group">
+          <label for="confirmPassword">Confirm Password:</label>
+          <input type="password" id="confirmPassword" name="confirmPassword" required [disabled]="alreadyBooked" required>
+        </div>
+        <div class="form-group">
+          <label for="address">Address:</label>
+          <textarea id="address" name="address" required></textarea>
+        </div>
+      
+        <div class="form-group full-width">
+          <button type="submit">Submit</button>
+        </div>
+      </div>
+    </form>
+
+  </div>
+</div>
+
+
