--- a/Customer/src/app/Components/customer-details/customer-details.component.css
+++ b/Customer/src/app/Components/customer-details/customer-details.component.css
@@ -14,14 +14,14 @@
   padding: 50px;
   max-width: 700px;
   width: 100%;
-  background-color:rgb(139, 138, 138);
+  background-color:whitesmoke;
 
 }
 
 .form-container h2 {
   margin-bottom: 30px;
   text-align: center;
-  color: whitesmoke;
+  color: black;
 }
 
 .grid-container {
@@ -30,13 +30,11 @@
   grid-gap: 50px;
 }
 
-
-
 label {
   font-weight: bold;
   display: block;
   margin-bottom: 8px;
-  color:white;
+  color:black;
 }
 
 input[type="text"],
@@ -60,7 +58,7 @@ input[type="checkbox"] {
 }
 
 button[type="submit"] {
-  background-color: #007bff;
+  background-color: black;
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -72,7 +70,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #0056b3;
+  background-color: #0b1118;
 }
 
 
