--- a/Customer/src/app/Components/storage-unit/storage-unit.component.css
+++ b/Customer/src/app/Components/storage-unit/storage-unit.component.css
@@ -145,6 +145,14 @@ strong {
   font-weight: bold; /* Make the word "Description" bold */
 }
 
+.head {
+  /* display: flex; */
+  text-align: center;
+  border: 3px solid black;
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 
 
 
