--- a/Customer/src/app/Components/viewEmail/view-email.component.html
+++ b/Customer/src/app/Components/viewEmail/view-email.component.html
@@ -1,5 +1,6 @@
+
 <div class="invoice-list">
-    <h2>Invoices</h2>
+    <h2>Invoiceshhhhh</h2>
     <ul>
       <li *ngFor="let invoice of invoices" class="invoice-item">
         <div class="invoice-info">
