chnaged the navigation

--- a/Customer/src/app/Components/customer-homepage/customer-homepage.component.html
+++ b/Customer/src/app/Components/customer-homepage/customer-homepage.component.html
@@ -3,28 +3,15 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
 
 <div class="home">
-  <header>
-    <div class="logo">
-      <img src="../assets/image/l1.png" alt="Lilz Storage" width="150%" height="100%"  />
-    </div>
-    <nav>
-      <ul>
-        <li><a routerLink="/StorageUnit"><i class="fas fa-box"></i> Storage Unit</a></li>
-        <li><a routerLink="/AboutUs"><i class="fas fa-info-circle"></i> About Us</a></li>
-        <li><a routerLink="/ContactUs"><i class="fas fa-phone"></i> Contact Us</a></li>
-         <li><a routerLink="/view-email"><i class="fas fa-invoice"></i> Invoice</a></li>
-        <li><a routerLink="/"><i class="fas fa-home"></i> Home</a></li>
-      </ul>
-    </nav>
-  </header>
-
+  
+<app-header></app-header>
   <div class="hero">
     <!-- Text overlay with moving background image -->
     <div class="slideshow-text">
       <div class="background-image"></div>
       <h1 class="move-text">We Are the Best Storage</h1>
       <p>Your Trusted Solution for Safe and Convenient Storage</p>
-      <a  fullWidth variant="outline" routerLink="/storage-unit" class="btn">Explore Our Units</a>
+      <a  fullWidth variant="outline" routerLink="/StorageUnit" class="btn">Explore Our Units</a>
     </div>
   </div>
 
