--- a/Customer/src/app/Components/storage-unit/storage-unit.component.html
+++ b/Customer/src/app/Components/storage-unit/storage-unit.component.html
@@ -1,30 +1,6 @@
 <div class="home">
-  <header>
-    <div class="logo">
-      <img
-        src="../assets/images/stora9.png"
-        alt="Card Image 3"
-        style="max-width: 80%; max-height: 50px"
-      />
-      <!-- Increase max-height -->
-    </div>
-    <nav>
-      <ul>
-        <li>
-          <a routerLink="/storage"><i class="fas fa-box"></i> Storage Unit</a>
-        </li>
-        <li>
-          <a routerLink="/about"><i class="fas fa-info-circle"></i> About Us</a>
-        </li>
-        <li>
-          <a routerLink="/contact"><i class="fas fa-phone"></i> Contact Us</a>
-        </li>
-        <li>
-          <a routerLink="/"><i class="fas fa-home"></i> Home</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  
+    <app-header></app-header>
 
   <div class="storage-text" style="margin-top: 20px">
     <!-- Add margin-top here -->
@@ -39,23 +15,23 @@
         <img
           src="../assets/images/stora.jpg"
           alt="Card Image 3"
-          style="max-width: 100%; max-height: 250px"
+          style="width: 100%; height: 200px;border-radius: 2%;"
         />
         <!-- Increase max-height -->
         <h3>Small Storage Unit</h3>
         <p>
-          <strong>Description: {{ description }}</strong>
+          <strong>Description: These are small units we offer, on the picture is the biggest on the small units</strong>
         </p>
         <p></p>
-        <p><strong> Price: R{{price}}</strong></p>
-        <p><strong> Size: {{size}}</strong></p>
+        <p><strong> Price: R 1500.00 - R 3000.00</strong></p>
+        <p><strong> Size: 1 m2 upto 9 m2</strong></p>
         <button class="btn" (click)="fetchRooms()">Book</button>
       </div>
     </div>
     <!-- Second Card -->
     <div class=" second-card">
       <div class="card-content">
-        <img src="../assets/images/stora2.jpg" alt="Card Image 3" style="max-width: 100%; max-height: 500px;"/>
+        <img src="../assets/images/stora2.jpg" alt="Card Image 3" style="width: 100%; height: 280px; border-radius: 2%;"/>
         <h3>Medium Storage Unit</h3>
         <p><strong>Description:</strong> </p> 
          <p>   
@@ -69,7 +45,7 @@
    <!-- Third Card -->
 <div class="third-card">
   <div class="card-content">
-    <img src="../assets/images/stora3.jpg" alt="Card Image 3" style="max-width: 500px; max-height: 500px;"/>
+    <img src="../assets/images/stora3.jpg" alt="Card Image 3" style="width: 100%; height: 350px;border-radius: 2%;"/>
     <h3>Large Storage Unit</h3>
     <p><strong>Description:</strong> </p>
     <p>  </p>
