--- a/Customer/src/app/Components/contact-us/contact-us.component.css
+++ b/Customer/src/app/Components/contact-us/contact-us.component.css
@@ -128,3 +128,15 @@ button {
 button:hover {
   background-color: #0056b3;
 }
+
+footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
