--- a/Customer/src/app/Components/customer-details/customer-details.component.html
+++ b/Customer/src/app/Components/customer-details/customer-details.component.html
@@ -3,42 +3,45 @@
 <div class="container">
 
  
-  
-  <img class=“logo” src = "https://i.imgur.com/P4iVJz0.png">
+    <img class=“logo” src = "https://i.imgur.com/P4iVJz0.png">
+
   <div class="form-container">
+  
     <h2>Personal Details</h2>
-    <form>
+    <form #formData="ngForm" (ngSubmit)="onSubmit()">
       <div class="grid-container">
-        <div class="form-group">
-          <label for="alreadyBooked">Already stored with us before?</label>
-          <input type="checkbox" id="alreadyBooked" name="alreadyBooked" [(ngModel)]="alreadyBooked" required>
-        </div>
+     
         <div class="form-group">
           <label for="firstName">First Name:</label>
-          <input type="text" id="firstName" name="firstName" required [disabled]="alreadyBooked" required >
+          <input type="text" id="firstName" name="firstName"  required [(ngModel)]="data.firstName">
         </div>
         <div class="form-group">
           <label for="surname">Surname:</label>
-          <input type="text" id="surname" name="surname" required [disabled]="alreadyBooked" required> 
+          <input type="text" id="surname" name="surname" required [(ngModel)]="data.surname"> 
         </div>
         <div class="form-group">
           <label for="cellphone">Cellphone:</label>
-          <input type="tel" id="cellphone" name="cellphone" required [disabled]="alreadyBooked" required>
+          <input type="tel" id="cellphone" name="cellphone" required [(ngModel)]="data.cellphone">
         </div>
         <div class="form-group">
           <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required>
+          <input type="email" id="email" name="email" required [(ngModel)]="data.email">
         </div>
         
-       
-      
+
         <div class="form-group full-width">
-          <button type="submit">Submit</button>
+          <button type="submit" (click)="onSubmit">Submit</button>
         </div>
       </div>
     </form>
+  
 
-  </div>
+  
+</div>
+<footer>
+
+  <p>&copy; 2023 Lilyz Storage<p>
+</footer>
 </div>
 
 
