added add magic :)

--- a/Customer/src/app/Components/available-storage/available-storage.component.html
+++ b/Customer/src/app/Components/available-storage/available-storage.component.html
@@ -2,7 +2,7 @@
     <!-- <h1>Available Storage Units</h1> -->
     <ul>
         <li *ngIf="rooms">
-            <span routerLink="/customerDetails">Size: {{rooms.unitSizeDescription}} = {{rooms.storageUnitType.unitSize}} m^2</span>
+            <span routerLink="/customerDetails" (click)="sendDataToBooking()">Size: {{rooms.unitSizeDescription}} = {{rooms.storageUnitType.unitSize}} m^2</span>
         </li>
     </ul>
 </div>
