--- a/Customer/src/app/Components/about-us/about-us.component.html
+++ b/Customer/src/app/Components/about-us/about-us.component.html
@@ -1,13 +1,5 @@
+<app-header></app-header>
 <section class="about-us">
-<nav>
-      <ul>
-        <li><a routerLink="/">Storage Unit</a></li>
-        <li><a routerLink="/book">About Us</a></li>
-        <li><a routerLink="/education">Contact Us</a></li>
-        <li><a routerLink="/login">Home</a></li>
-      </ul>
-   
-    </nav>
   <div class="container">
     
     <h2>About Us</h2>
