--- a/Customer/src/app/Components/booking/booking.component.html
+++ b/Customer/src/app/Components/booking/booking.component.html
@@ -61,13 +61,13 @@
     <label for="no">No</label>
   </div>
 
-  <div *ngIf="showExtraFields">
+  <!-- <div *ngIf="showExtraFields">
     <input type="text" placeholder="Street Number" />
     <input type="text" placeholder="Street Name" />
     <input type="text" placeholder="State" />
     <input type="text" placeholder="Zip Code" />
-    <!-- Add more extra fields as needed -->
-  </div>
+     Add more extra fields as needed 
+  </div> -->
   <input  ngModel name="totalAmount" type="text" placeholder="Total" [(ngModel)]="price"/>
   <label>Total:</label>
   <div>
