--- a/Customer/src/app/Components/storage-unit/storage-unit.component.html
+++ b/Customer/src/app/Components/storage-unit/storage-unit.component.html
@@ -33,11 +33,11 @@
       <div class="card-content">
         <img src="../assets/images/stora2.jpg" alt="Card Image 3" style="width: 100%; height: 280px; border-radius: 2%;"/>
         <h3>Medium Storage Unit</h3>
-        <p><strong>Description:</strong> </p> 
+        <p><strong>Description: These are Medium units we offer, on the picture is the biggest on the Medium units</strong> </p> 
          <p>   
          </p>
-        <p><strong> Price:</strong> </p>
-        <p> <Strong> Size: </Strong></p>
+        <p><strong> R 1500.00 - R 3000.00</strong> </p>
+        <p> <Strong> Size: 1 m2 upto 9 m2</Strong></p>
         <button class="btn" (click)="fetchMRooms()">Book</button>
       </div>
     </div>
@@ -47,10 +47,10 @@
   <div class="card-content">
     <img src="../assets/images/stora3.jpg" alt="Card Image 3" style="width: 100%; height: 350px;border-radius: 2%;"/>
     <h3>Large Storage Unit</h3>
-    <p><strong>Description:</strong> </p>
+    <p><strong>Description: These are Large units we offer, on the picture is the biggest on the Large units</strong> </p>
     <p>  </p>
-    <p><strong> Price: </strong> </p>
-        <p> <Strong> Size: </Strong></p>
+    <p><strong> R 1500.00 - R 3000.00</strong> </p>
+        <p> <Strong> Size: 1 m2 upto 9 m2</Strong></p>
     <button class="btn" (click)="fetchLRooms()">Book</button>
   </div>
 </div>
