remove some stuff on booking

--- a/Customer/src/app/Components/booking/booking.component.html
+++ b/Customer/src/app/Components/booking/booking.component.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <div class="spinner">
+  <!-- <div class="spinner">
     <div>
       <label>Quantity:</label>
     </div>
@@ -36,7 +36,7 @@
       readonly
     />
     <button type="button" class="increment" (click)="incrementQuantity()">+</button>
-  </div>
+  </div> -->
   <div class="collection">
     <label for="collection">Collection:</label>
     <input
