--- a/Customer/src/app/Components/contact-us/contact-us.component.html
+++ b/Customer/src/app/Components/contact-us/contact-us.component.html
@@ -1,12 +1,5 @@
 <div class="contact-us">
-  <nav>
-    <ul>
-      <li><a routerLink="/">Storage Unit</a></li>
-      <li><a routerLink="/book">About Us</a></li>
-      <li><a routerLink="/education">Contact Us</a></li>
-      <li><a routerLink="/login">Home</a></li>
-    </ul>
-  </nav>
+ <app-header></app-header>
     <div class="contact-container">
       <img class=“logo” src = "https://i.imgur.com/P4iVJz0.png">
       <div class="contact-info">
