--- a/Admin-Driver/src/app/Components/vehicle-list-component/vehicle-list-component.component.html
+++ b/Admin-Driver/src/app/Components/vehicle-list-component/vehicle-list-component.component.html
@@ -1,4 +1,4 @@
-
+<app-navbar></app-navbar>
 <div class="page-container">
     <div class="header">
       <h1 class="vehicle-list-label">Vehicle List</h1>
