--- a/Admin-Driver/src/app/driver-list/driver-list.component.html
+++ b/Admin-Driver/src/app/driver-list/driver-list.component.html
@@ -1,5 +1,7 @@
+<app-navbar></app-navbar>
 <div class="page-container">
     <div class="header">
+    
       <h1>List of Drivers</h1>
     </div>
     <div class="driver-list">
