--- a/Admin-Driver/src/app/Components/collections/collections.component.html
+++ b/Admin-Driver/src/app/Components/collections/collections.component.html
@@ -1,10 +1,6 @@
-<button type="button" (click)="goBack()">
-    Back
-</button>
+<button type="button" (click)="goBack()">Back</button>
 <div class="collections">
-    <h1>Collection Details</h1>
-    <li>{{location | uppercase}}</li>
-    <button type="button" class="btnTakeCollection" > 
-        Take Collection
-    </button>
+  <h1>Collection Details</h1>
+  <li>{{ location | uppercase }}</li>
+  <button type="button" class="btnTakeCollection">Take Collection</button>
 </div>
