--- a/Customer/src/app/Components/about-us/about-us.component.html
+++ b/Customer/src/app/Components/about-us/about-us.component.html
@@ -1,22 +1,21 @@
 <app-header></app-header>
 <section class="about-us">
   <div class="container">
-    
     <h2>About Us</h2>
     <div class="team-members">
-
       <div class="team-member">
         <div class="card">
           <div class="card-inner">
             <div class="card-front">
               <img src="../assets/image/Lithemba.jpg" alt="Person 1" />
-            
             </div>
             <div class="card-back">
               <h3>About Us</h3>
-              <p>At Lilyz Storage, we take pride in being more than just a place to store your belongings;
-                 we are a trusted partner in your storage journey. With a history rooted in Cape Town,<br>
-                 </p>
+              <p>
+                At Lilyz Storage, we take pride in being more than just a place
+                to store your belongings; we are a trusted partner in your
+                storage journey. With a history rooted in Cape Town,<br />
+              </p>
             </div>
           </div>
         </div>
@@ -27,13 +26,14 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="../assets/image/Wisdom.jpg" alt="Person 1" />
-       
             </div>
             <div class="card-back">
               <h3>Our History</h3>
-              <p>In 2010 , Lilyz Storage opened its doors with a simple vision: to provide safe, 
-                secure, and convenient storage solutions for individuals and businesses in Cape Town. <br>
-                </p>
+              <p>
+                In 2010 , Lilyz Storage opened its doors with a simple vision:
+                to provide safe, secure, and convenient storage solutions for
+                individuals and businesses in Cape Town. <br />
+              </p>
             </div>
           </div>
         </div>
@@ -44,13 +44,14 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="../assets/image/Ruvimbo.jpg" alt="Person 1" />
-            
             </div>
             <div class="card-back">
               <h3>Our History</h3>
-              <p>Over the years, we have evolved and adapted to meet the changing needs of our community. 
-                We have invested in state-of-the-art security systems to ensure the safety of your belongings.
-                </p>
+              <p>
+                Over the years, we have evolved and adapted to meet the changing
+                needs of our community. We have invested in state-of-the-art
+                security systems to ensure the safety of your belongings.
+              </p>
             </div>
           </div>
         </div>
@@ -61,16 +62,15 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="../assets/image/Christain.jpg" alt="Person 1" />
-             
             </div>
             <div class="card-back">
-            <h3>Our Values</h3>              <p>
-
+              <h3>Our Values</h3>
+              <p>
                 At Lilyz Storage, our core values drive everything we do:
-                
-                Customer-Centric: We prioritize your needs and satisfaction above all else.
-                 Our friendly and knowledgeable staff are always here to assist you.<br>
-                </p>
+                Customer-Centric: We prioritize your needs and satisfaction
+                above all else. Our friendly and knowledgeable staff are always
+                here to assist you.<br />
+              </p>
             </div>
           </div>
         </div>
@@ -81,12 +81,13 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="../assets/image/Hakizimana.jpg" alt="Person 1" />
-              
             </div>
             <div class="card-back">
               <h3>Our Mission</h3>
-              <p>Our mission is to provide exceptional storage solutions that simplify and enhance the lives of
-                 our customers. </p>
+              <p>
+                Our mission is to provide exceptional storage solutions that
+                simplify and enhance the lives of our customers.
+              </p>
             </div>
           </div>
         </div>
@@ -97,12 +98,13 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="../assets/image/Ndmiso1.jpg" alt="Person 1" />
-            
             </div>
             <div class="card-back">
               <h3>Looking forward</h3>
-              <p>As we continue to grow and evolve, we remain dedicated to delivering top-notch storage services to our community.
-                 </p>
+              <p>
+                As we continue to grow and evolve, we remain dedicated to
+                delivering top-notch storage services to our community.
+              </p>
             </div>
           </div>
         </div>
@@ -110,7 +112,4 @@
       <!-- Repeat the above structure for each team member -->
     </div>
   </div>
-
-
 </section>
-
