--- a/Customer/src/app/Components/available-storage/available-storage.component.html
+++ b/Customer/src/app/Components/available-storage/available-storage.component.html
@@ -1,8 +1,11 @@
 <div>
-    <!-- <h1>Available Storage Units</h1> -->
-    <ul>
-        <li *ngIf="rooms">
-            <span routerLink="/customerDetails" (click)="sendDataToBooking()">Size: {{rooms.unitSizeDescription}} = {{rooms.storageUnitType.unitSize}} m^2</span>
-        </li>
-    </ul>
+  <!-- <h1>Available Storage Units</h1> -->
+  <ul>
+    <li *ngIf="rooms">
+      <span routerLink="/customerDetails" (click)="sendDataToBooking()"
+        >Size: {{ rooms.unitSizeDescription }} =
+        {{ rooms.storageUnitType.unitSize }} m^2</span
+      >
+    </li>
+  </ul>
 </div>
